# garantify

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  RELEASING.md  SECURITY.md  SPEC.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  docker-publish.yml
migrations/: 0001_initial.sql  0002_auth.sql  0003_equipments.sql  0004_notifications_sent.sql  0005_users_settings.sql  0006_notifications_channel.sql
scripts/: init.sh
src/: config.rs  db.rs  error.rs  flash.rs  main.rs  middleware.rs  templates.rs
src/auth/: backend.rs
src/handlers/: api.rs  auth.rs  equipments.rs  mod.rs  settings.rs
src/jobs/: mod.rs
src/models/: equipment.rs  mod.rs  user.rs
src/services/: crypto.rs  email.rs  mod.rs  scrape.rs  slack.rs  upload.rs
static/css/: theme.css
templates/: 404.html  base.html  dashboard.html  settings.html
templates/auth/: forgot_password.html  login.html  register.html  reset_password.html
templates/equipments/: detail.html  edit.html  new.html
tests/: settings_password.rs
