[package]
name = "warranty-tracker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "warranty-tracker"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "fs"] }

# Traitement d'images (resize à la volée)
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

# Base de données
# Note: on utilise query() runtime (pas query!) pour éviter SQLX_OFFLINE
# à configurer en Phase 6 avec cargo sqlx prepare
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
    "uuid",
    "chrono",
] }

# Auth & sessions
argon2 = "0.5"
tower-sessions = "0.13"
axum-login = "0.16"
async-trait = "0.1"

# Templates
askama = "0.12"
askama_axum = "0.4"

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }

# HTTP client (scraping + Slack webhooks)
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "cookies"] }

# Scraping HTML
scraper = "0.21"

# Cron interne
tokio-cron-scheduler = "0.13"

# Rate limiting
governor = { version = "0.6", features = ["dashmap"] }

# Config et env
dotenvy = "0.15"

# Chiffrement AES-256-GCM (webhook Slack au repos)
aes-gcm = "0.10"
base64 = { version = "0.22", features = ["std"] }
serde_json = "1"

# Envoi d'emails via SMTP
lettre = { version = "0.11", default-features = false, features = [
    "smtp-transport",
    "native-tls",
    "tokio1-native-tls",
    "builder",
] }

# Gestion d'erreurs
thiserror = "2"
anyhow = "1"

# Logs
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
